# CustomerServiceAgent

./: .env.example  .gitignore  IMPROVEMENT.md  README.md  TODO.md  requirements.txt
agent/: hello_agents.py  pyproject.toml  setup.py
agent/examples/: devlog_demo.py  todowrite_demo.py
agent/src/agents/: react_agent.py  simple_agent.py
agent/src/context/: builder.py
agent/src/core/: agent.py  llm_adapters.py
agent/src/tools/: base.py
config/: __init__.py  config.example.json  config_loader.py  env_utils.py
dataset/: README.md  preprocess.py
images/: IMAGE_PROMPT.md
model/: README.md
model/inference/: docker-compose-tei.yml  docker-tei.yml  tei_client.py
model/trainer/: reranker_dpo.py  reranker_ft.py
model/utils/: build_dataset.py
process/: IMPROVEMENT.md  README.md  __init__.py  main.py
process/clawer/: README.md  __init__.py  centers.py  config.py  crawler.py  run.py  run_all.py  support_crawler.py
process/crawler/: README.md  config.py  crawler.py  run.py  run_all.py  support_crawler.py
process/dataset/: papers_interpretation.html  test_comprehensive.html  user_dict.example.txt
process/src/: html_pruner.py  html_utils.py  main.py  text_process.py
process/utils/: config.py  jieba_util.py  llm_api.py
rag/: README.md  __init__.py  config.py  pipeline.py  schema.py
rag/api/: errors.py  main.py  models.py  utils.py
rag/docs/: API_REFERENCE.md  openapi.json
rag/evaluation/: __init__.py  benchmark.py  generation_eval.py  metrics.py  rag_e2e_eval.py  retrieval_eval.py
rag/generation/: __init__.py  citation.py  context_assembly.py  generator.py  hallucination_control.py  llm_generation.py  prompt_template.py
rag/indexing/: __init__.py  _process_compat.py  chunker.py  chunking.py  document_loader.py  embedder.py  embedding.py  es_index.py  index_builder.py  indexer.py  keyword_store.py  loader.py  local_index.py  (+7 more)
scripts/: build_JIEBAdict.sh  build_index.py  build_index.sh  export_openapi.py  process_HTMLdata.sh  run_AGTserver.sh  run_RAGserver.sh  start_tei.sh
tests/: conftest.py  test_algorithm_completeness.py  test_algorithm_optimization.py  test_bugfix_regression.py  test_html_utils_extended.py  test_text_process_utils.py  test_text_process_utils_extended.py
(+109 files in other folders)
